fix: add missing border styles

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -1,3 +1,7 @@
-.main-navigation {
+.nav-main {
   background-color: $academy-color-status-neutral;
+}
+
+.input-group > *:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+  border-radius: 0 5px 5px 0;
 }
